--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -119,7 +119,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);MAIN</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\BeatEmAll Project\BeatEmAll\Catch;C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\BeatEmAll Project\BeatEmAll;C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\BeatEmAll Project\Box2DDeps;C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\SFML-2.3.2-windows-vc14-32-bit\SFML-2.3.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -209,6 +209,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameMachine\MainGameState.cpp" />
+    <ClCompile Include="GameObjects\GameObject.cpp" />
+    <ClCompile Include="GameObjects\Player.cpp" />
     <ClCompile Include="GameObjects\Tile.cpp" />
     <ClCompile Include="GameObjects\TileMap.cpp" />
     <ClCompile Include="Main.cpp">
@@ -315,6 +318,9 @@
     <ClInclude Include="Catch\reporters\catch_reporter_multi.hpp" />
     <ClInclude Include="Catch\reporters\catch_reporter_teamcity.hpp" />
     <ClInclude Include="Catch\reporters\catch_reporter_xml.hpp" />
+    <ClInclude Include="GameMachine\MainGameState.h" />
+    <ClInclude Include="GameObjects\GameObject.h" />
+    <ClInclude Include="GameObjects\Player.h" />
     <ClInclude Include="GameObjects\Tile.h" />
     <ClInclude Include="GameObjects\TileMap.h" />
     <ClInclude Include="Interfaces\Drawable.h" />
@@ -328,6 +334,7 @@
     <ClInclude Include="Tiled\TiledMap.h" />
     <ClInclude Include="Tiled\TiledParser\TiledMapParser.h" />
     <ClInclude Include="Tiled\TiledTransform.h" />
+    <ClInclude Include="Updatable\Updatable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
