--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -213,12 +213,17 @@
     <ClCompile Include="DebugBoxDraw\SFMLDebugDraw.cpp" />
     <ClCompile Include="DebugBoxDraw\WorldConstants.cpp" />
     <ClCompile Include="GameMachine\MainGameState.cpp" />
+    <ClCompile Include="GameObjects\Actions\Action.cpp" />
+    <ClCompile Include="GameObjects\Actions\MoveAction.cpp" />
+    <ClCompile Include="GameObjects\Actions\ShootAction.cpp" />
     <ClCompile Include="GameObjects\ChildBearer.cpp" />
+    <ClCompile Include="GameObjects\Defs\PlayerDefinition.cpp" />
     <ClCompile Include="GameObjects\Projectile\Bullet.cpp" />
     <ClCompile Include="GameObjects\GameObject.cpp" />
     <ClCompile Include="GameObjects\Player.cpp" />
     <ClCompile Include="GameObjects\Tile.cpp" />
     <ClCompile Include="GameObjects\TileMap.cpp" />
+    <ClCompile Include="GameObjects\Weapon\Pistol.cpp" />
     <ClCompile Include="Keyboard\KeyboardManager.cpp" />
     <ClCompile Include="Main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\SFML-2.3.2-windows-vc14-32-bit\SFML-2.3.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -328,14 +333,22 @@
     <ClInclude Include="DebugBoxDraw\SFMLDebugDraw.h" />
     <ClInclude Include="DebugBoxDraw\WorldConstants.h" />
     <ClInclude Include="GameMachine\MainGameState.h" />
+    <ClInclude Include="GameObjects\Actions\Action.h" />
+    <ClInclude Include="GameObjects\Actions\MoveAction.h" />
+    <ClInclude Include="GameObjects\Actions\ShootAction.h" />
     <ClInclude Include="GameObjects\ChildBearer.h" />
+    <ClInclude Include="GameObjects\Defs\PlayerDefinition.h" />
     <ClInclude Include="GameObjects\Projectile\Bullet.h" />
     <ClInclude Include="GameObjects\GameObject.h" />
     <ClInclude Include="GameObjects\Player.h" />
+    <ClInclude Include="GameObjects\Projectile\Projectile.h" />
     <ClInclude Include="GameObjects\Tile.h" />
     <ClInclude Include="GameObjects\TileMap.h" />
+    <ClInclude Include="GameObjects\Weapon\Pistol.h" />
+    <ClInclude Include="GameObjects\Weapon\Weapon.h" />
     <ClInclude Include="Keyboard\KeyboardListener.h" />
     <ClInclude Include="Keyboard\KeyboardManager.h" />
+    <ClInclude Include="Mathematics\GameMath.h" />
     <ClInclude Include="Mouse\MouseListener.h" />
     <ClInclude Include="RapidXML\rapidxml.hpp" />
     <ClInclude Include="RapidXML\rapidxml_iterators.hpp" />
