INT: The beginning of steering

--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -211,6 +211,7 @@
   <ItemGroup>
     <ClCompile Include="Animation\Animation.cpp" />
     <ClCompile Include="Component\EnemyComponents\EnemyGraphicComponent.cpp" />
+    <ClCompile Include="Component\EnemyComponents\SteeringInputComponent.cpp" />
     <ClCompile Include="Component\GraphicsComponent.cpp" />
     <ClCompile Include="Component\KeyboardInputComponent.cpp" />
     <ClCompile Include="Component\PlayerComponents\PlayerGraphicsComponent.cpp" />
@@ -222,6 +223,7 @@
     <ClCompile Include="GameObjects\Actions\AimAction.cpp" />
     <ClCompile Include="GameObjects\Actions\MoveAction.cpp" />
     <ClCompile Include="GameObjects\Actions\ShootAction.cpp" />
+    <ClCompile Include="GameObjects\Actions\VelocityAction.cpp" />
     <ClCompile Include="GameObjects\ChildBearer.cpp" />
     <ClCompile Include="GameObjects\Defs\PlayerDefinition.cpp" />
     <ClCompile Include="GameObjects\Projectile\Bullet.cpp" />
@@ -230,6 +232,7 @@
     <ClCompile Include="GameObjects\Tile.cpp" />
     <ClCompile Include="GameObjects\TileMap.cpp" />
     <ClCompile Include="GameObjects\Weapon\Pistol.cpp" />
+    <ClCompile Include="IA\Steering\SteeringManager.cpp" />
     <ClCompile Include="Keyboard\KeyboardManager.cpp" />
     <ClCompile Include="Main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\SFML-2.3.2-windows-vc14-32-bit\SFML-2.3.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -338,6 +341,7 @@
     <ClInclude Include="Catch\reporters\catch_reporter_teamcity.hpp" />
     <ClInclude Include="Catch\reporters\catch_reporter_xml.hpp" />
     <ClInclude Include="Component\EnemyComponents\EnemyGraphicComponent.h" />
+    <ClInclude Include="Component\EnemyComponents\SteeringInputComponent.h" />
     <ClInclude Include="Component\GraphicsComponent.h" />
     <ClInclude Include="Component\InputComponent.h" />
     <ClInclude Include="Component\KeyboardInputComponent.h" />
@@ -351,6 +355,7 @@
     <ClInclude Include="GameObjects\Actions\AimAction.h" />
     <ClInclude Include="GameObjects\Actions\MoveAction.h" />
     <ClInclude Include="GameObjects\Actions\ShootAction.h" />
+    <ClInclude Include="GameObjects\Actions\VelocityAction.h" />
     <ClInclude Include="GameObjects\ChildBearer.h" />
     <ClInclude Include="GameObjects\Defs\PlayerDefinition.h" />
     <ClInclude Include="GameObjects\Projectile\Bullet.h" />
@@ -361,6 +366,8 @@
     <ClInclude Include="GameObjects\TileMap.h" />
     <ClInclude Include="GameObjects\Weapon\Pistol.h" />
     <ClInclude Include="GameObjects\Weapon\Weapon.h" />
+    <ClInclude Include="IA\Steering\Steerable.h" />
+    <ClInclude Include="IA\Steering\SteeringManager.h" />
     <ClInclude Include="Keyboard\KeyboardListener.h" />
     <ClInclude Include="Keyboard\KeyboardManager.h" />
     <ClInclude Include="Mathematics\GameMath.h" />
