--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -235,6 +235,7 @@
     <ClCompile Include="IA\Steering\SeekBehavior.cpp" />
     <ClCompile Include="IA\Steering\Steerable.cpp" />
     <ClCompile Include="IA\Steering\SteeringManager.cpp" />
+    <ClCompile Include="IA\Steering\WanderBehavior.cpp" />
     <ClCompile Include="Keyboard\KeyboardManager.cpp" />
     <ClCompile Include="Main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\SFML-2.3.2-windows-vc14-32-bit\SFML-2.3.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -372,6 +373,7 @@
     <ClInclude Include="IA\Steering\Steerable.h" />
     <ClInclude Include="IA\Steering\SteeringBehavior.h" />
     <ClInclude Include="IA\Steering\SteeringManager.h" />
+    <ClInclude Include="IA\Steering\WanderBehavior.h" />
     <ClInclude Include="Keyboard\KeyboardListener.h" />
     <ClInclude Include="Keyboard\KeyboardManager.h" />
     <ClInclude Include="Mathematics\GameMath.h" />
