--- a/BeatEmAll/BeatEmAll.vcxproj.filters
+++ b/BeatEmAll/BeatEmAll.vcxproj.filters
@@ -38,6 +38,21 @@
     <ClCompile Include="Collision\ContactListener.cpp" />
     <ClCompile Include="GameObjects\Projectile\GraphicBullet.cpp" />
     <ClCompile Include="GameObjects\Projectile\ProjectileFactory.cpp" />
+    <ClCompile Include="Component\GenericGraphicsComponent.cpp" />
+    <ClCompile Include="GameObjects\Projectile\BulletBuilder.cpp" />
+    <ClCompile Include="DDD\FixtureInfo.cpp" />
+    <ClCompile Include="DDD\GraphicInfo.cpp" />
+    <ClCompile Include="DDD\Projectile\BulletUserDataInfo.cpp" />
+    <ClCompile Include="DDD\GameObjectInfo.cpp" />
+    <ClCompile Include="DDD\InfoCollection.cpp" />
+    <ClCompile Include="DDD\InfoBuilder.cpp" />
+    <ClCompile Include="Tests\DDD\InfoBuilderTest.cpp" />
+    <ClCompile Include="Tests\Tiled\TestTiledTransform.cpp" />
+    <ClCompile Include="Tests\TiledParser\RotationMap\TestRotation.cpp" />
+    <ClCompile Include="Tests\TiledParser\SmallMap\TestLittleMap.cpp" />
+    <ClCompile Include="Tests\TiledParser\SmallMap\TestTileMap.cpp" />
+    <ClCompile Include="Tests\TestCatch.cpp" />
+    <ClCompile Include="Tests\TestLayerTile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation\Animation.h" />
@@ -188,5 +203,18 @@
     <ClInclude Include="GameObjects\GameObjectTypes.h" />
     <ClInclude Include="GameObjects\Projectile\GraphicBullet.h" />
     <ClInclude Include="GameObjects\Projectile\ProjectileFactory.h" />
+    <ClInclude Include="Component\GenericGraphicsComponent.h" />
+    <ClInclude Include="GameObjects\Projectile\BulletBuilder.h" />
+    <ClInclude Include="DDD\PhysicsInfo.h" />
+    <ClInclude Include="DDD\FixtureInfo.h" />
+    <ClInclude Include="DDD\GraphicInfo.h" />
+    <ClInclude Include="DDD\RepresentationInfo.h" />
+    <ClInclude Include="DDD\Projectile\BulletUserDataInfo.h" />
+    <ClInclude Include="DDD\GameObjectInfo.h" />
+    <ClInclude Include="DDD\UserDataInfo.h" />
+    <ClInclude Include="DDD\InfoCollection.h" />
+    <ClInclude Include="DDD\InfoBuilder.h" />
+    <ClInclude Include="DDD\Representation\DrawingRepresentation.h" />
+    <ClInclude Include="DDD\Representation\SpriteRepresentation.h" />
   </ItemGroup>
 </Project>
