--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -217,6 +217,7 @@
     <ClCompile Include="Component\KeyboardInputComponent.cpp" />
     <ClCompile Include="Component\PlayerComponents\PlayerGraphicsComponent.cpp" />
     <ClCompile Include="Component\RandomInputComponent.cpp" />
+    <ClCompile Include="DDD\CircleFixtureInfo.cpp" />
     <ClCompile Include="DDD\FixtureInfo.cpp" />
     <ClCompile Include="DDD\GameObjectInfo.cpp" />
     <ClCompile Include="DDD\GraphicInfo.cpp" />
@@ -366,7 +367,11 @@
     <ClInclude Include="Component\PhysicsComponent.h" />
     <ClInclude Include="Component\PlayerComponents\PlayerGraphicsComponent.h" />
     <ClInclude Include="Component\RandomInputComponent.h" />
+    <ClInclude Include="DDD\CircleFixtureInfo.h" />
     <ClInclude Include="DDD\FixtureInfo.h" />
+    <ClInclude Include="DDD\FixtureShape\CircleShape.h" />
+    <ClInclude Include="DDD\FixtureShape\FixtureShape.h" />
+    <ClInclude Include="DDD\FixtureShape\PolygonShape.h" />
     <ClInclude Include="DDD\GameObjectInfo.h" />
     <ClInclude Include="DDD\GraphicInfo.h" />
     <ClInclude Include="DDD\InfoBuilder.h" />
