--- a/BeatEmAll/BeatEmAll.vcxproj.filters
+++ b/BeatEmAll/BeatEmAll.vcxproj.filters
@@ -215,5 +215,6 @@
     <ClInclude Include="DDD\FixtureShape\FixtureShape.h" />
     <ClInclude Include="DDD\FixtureShape\CircleShape.h" />
     <ClInclude Include="DDD\FixtureShape\PolygonShape.h" />
+    <ClInclude Include="DDD\FixtureShape\VerticesShape.h" />
   </ItemGroup>
 </Project>
